Fixed Overlap

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    padding-left:11px;
+    padding-left:11em;
     font-family: Georgia, "Times New Roman", Times, serif;
     color: #58ACFA;
     background-color: #333333 
